Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,9 @@ steps:
 
 - task: NuGetCommand@2
   inputs:
+    versionEnvVar: '1.0.5'
     restoreSolution: '$(solution)'
+    
 
 - task: VSBuild@1
   inputs:
