--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,13 +19,13 @@ steps:
 
 - task: NuGetCommand@2
   inputs:
-    versionEnvVar: latest
+    versionEnvVar: '1.0.0'
     restoreSolution: '$(solution)'
     
 
 - task: VSBuild@1
   inputs:
-    vsVersion: latest
+    vsVersion: '1.0.0'
     solution: '$(solution)'
     msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:DesktopBuildPackageLocation="$(build.artifactStagingDirectory)\WebApp.zip" /p:DeployIisAppPath="Default Web Site"'
     platform: '$(buildPlatform)'
