--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,10 +17,10 @@ variables:
 steps:
 - task: NuGetToolInstaller@0
 
-- task: NuGetCommand@2
-  inputs:
-    versionEnvVar: '1.0.0'
-    restoreSolution: '$(solution)'
+# - task: NuGetCommand@2
+#   inputs:
+#     versionEnvVar: '1.0.0'
+#     restoreSolution: '$(solution)'
     
 
 - task: VSBuild@1
